1576290929 | 99 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_brazilian.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_danish.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_finnish.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_german.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_italian.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_latam.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_spanish.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_thai.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_ukrainian.json,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts
https://steamdb.info/patchnotes/4492026/

--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -216,6 +216,7 @@
 "MenuAction_ShowDisplayMirror" "Show VR View"
 "MenuAction_HideDisplayMirror" "Hide VR View"
 "MenuAction_DisplayMirror" "Display VR View"
+"MenuAction_PerformanceGraph" "Display Performance Graph"
 "MenuAction_ShowControllerBinding" "Controller Settings"
 "MenuAction_ShowManageTrackers" "Manage Vive Trackers"
 "MenuAction_UpdateFirmware" "Update Device"
