--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_danish.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_danish.json
@@ -16,10 +16,10 @@
 	"pairingdevice_vivewand_shortname": "HTC Vive-controller",
 	"pairingdevice_vivetracker_shortname": "HTC Vive-tracker",
 	"pairingdevice_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
-	"pairingdevice_a_knuckles_controllername": "a Valve Index Controller",
+	"pairingdevice_a_knuckles_controllername": "en Valve Index Controller",
 	"pairingdevice_a_vivewand_shortname": "en HTC Vive-controller",
 	"pairingdevice_a_vivetracker_shortname": "en HTC Vive-tracker",
-	"pairingdevice_a_logitechvrinkpilotedition_shortname": "a Logitech VR Ink Pilot Edition",
+	"pairingdevice_a_logitechvrinkpilotedition_shortname": "en Logitech VR Ink Pilot Edition",
 	"pair_controller_title": "Tilknyt %1$s",
 	"pairinginstructions_generic_desc": "Sæt din controller i tilknytningstilstand",
 	"pairsuccess_title": "Færdig!",
@@ -28,7 +28,7 @@
 	"pairing_button_menu": "Menu-knap",
 	"pairing_button_b": "B-knap",
 	"pairing_knuckles_instructions_press": "Tryk og hold både %1$s og %2$s nede, indtil lyset på controlleren begynder at blinke blåt...",
-	"pairing_pen_instructions_press": "Press and hold both the %1$s and %2$s until the light on the pen begins blinking blue...",
+	"pairing_pen_instructions_press": "Tryk og hold både %1$s og %2$s nede, indtil lyset på pennen begynder at blinke blåt...",
 	"pairing_tracker_instructions_press": "Tryk og hold %1$s nede, indtil lyset på trackeren begynder at blinke blåt...",
 	"pairing_button_differentcontroller": "Jeg ønsker at tilknytte en anden type af controller...",
 	"pairing_button_done": "Færdig",
