--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_finnish.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_finnish.json
@@ -12,14 +12,14 @@
 	"pairing_nodongles_desc": "SteamVR ei löydä yhtään laitetta, johon ohjaimet voisi yhdistää.",
 	"pairing_nodongles_instr": "Varmista, että VR-lasisi on yhdistetty.",
 	"pairing_selectdevice_title": "Valitse ohjaintyyppi",
-	"pairingdevice_knuckles_controllername": "Valve Index Controller",
+	"pairingdevice_knuckles_controllername": "Valve Index -ohjain",
 	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
 	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
 	"pairingdevice_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
-	"pairingdevice_a_knuckles_controllername": "a Valve Index Controller",
+	"pairingdevice_a_knuckles_controllername": "Valve Index -ohjain",
 	"pairingdevice_a_vivewand_shortname": "HTC Vive -ohjain",
 	"pairingdevice_a_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_logitechvrinkpilotedition_shortname": "a Logitech VR Ink Pilot Edition",
+	"pairingdevice_a_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
 	"pair_controller_title": "Yhdistä %1$s",
 	"pairinginstructions_generic_desc": "Aseta ohjain paritustilaan",
 	"pairsuccess_title": "Onnistui",
@@ -28,7 +28,7 @@
 	"pairing_button_menu": "Valikkopainike",
 	"pairing_button_b": "B-painike",
 	"pairing_knuckles_instructions_press": "Paina ja pidä pohjassa sekä %1$s että %2$s, kunnes ohjaimen valo alkaa vilkkua sinisenä.",
-	"pairing_pen_instructions_press": "Press and hold both the %1$s and %2$s until the light on the pen begins blinking blue...",
+	"pairing_pen_instructions_press": "Paina ja pidä sekä %1$s että %2$s pohjassa, kunnes kynän valo alkaa vilkkua sinisenä.",
 	"pairing_tracker_instructions_press": "Paina ja pidä %1$s pohjassa, kunnes ohjaimen valo alkaa vilkkua sinisenä.",
 	"pairing_button_differentcontroller": "Haluan yhdistää eri ohjaimen.",
 	"pairing_button_done": "Valmis",
