--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_german.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_german.json
@@ -16,10 +16,10 @@
 	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
 	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
 	"pairingdevice_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
-	"pairingdevice_a_knuckles_controllername": "a Valve Index Controller",
+	"pairingdevice_a_knuckles_controllername": "ein Valve Index Controller",
 	"pairingdevice_a_vivewand_shortname": "HTC Vive Controller",
 	"pairingdevice_a_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_logitechvrinkpilotedition_shortname": "a Logitech VR Ink Pilot Edition",
+	"pairingdevice_a_logitechvrinkpilotedition_shortname": "ein Logitech VR Ink Pilot Edition",
 	"pair_controller_title": "%1$s koppeln",
 	"pairinginstructions_generic_desc": "Controller in Kopplungsmodus versetzen",
 	"pairsuccess_title": "Erfolgreich!",
@@ -28,7 +28,7 @@
 	"pairing_button_menu": "Menü-Taste",
 	"pairing_button_b": "B-Taste",
 	"pairing_knuckles_instructions_press": "Drücken und halten Sie %1$s und %2$s, bis das Licht auf dem Tracker blau zu blinken beginnt.",
-	"pairing_pen_instructions_press": "Press and hold both the %1$s and %2$s until the light on the pen begins blinking blue...",
+	"pairing_pen_instructions_press": "Drücken und halten Sie %1$s und %2$s, bis das Licht auf dem Eingabestift blau zu blinken beginnt.",
 	"pairing_tracker_instructions_press": "Drücken und halten Sie %1$s, bis das Licht auf dem Tracker blau zu blinken beginnt.",
 	"pairing_button_differentcontroller": "Ich möchte einen anderen Controllertyp koppeln...",
 	"pairing_button_done": "Fertig",
