--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_italian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_italian.json
@@ -12,14 +12,14 @@
 	"pairing_nodongles_desc": "SteamVR non riesce a trovare alcun hardware a cui associare i controller.",
 	"pairing_nodongles_instr": "Assicurati che il visore sia collegato.",
 	"pairing_selectdevice_title": "Seleziona il tuo controller",
-	"pairingdevice_knuckles_controllername": "Valve Index Controller",
+	"pairingdevice_knuckles_controllername": "Controller Valve Index",
 	"pairingdevice_vivewand_shortname": "Controller HTC Vive",
 	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
 	"pairingdevice_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
-	"pairingdevice_a_knuckles_controllername": "a Valve Index Controller",
+	"pairingdevice_a_knuckles_controllername": "un controller Valve Index",
 	"pairingdevice_a_vivewand_shortname": "un Controller HTC Vive",
 	"pairingdevice_a_vivetracker_shortname": "un HTC Vive Tracker",
-	"pairingdevice_a_logitechvrinkpilotedition_shortname": "a Logitech VR Ink Pilot Edition",
+	"pairingdevice_a_logitechvrinkpilotedition_shortname": "un Logitech VR Ink Pilot Edition",
 	"pair_controller_title": "Associa %1$s",
 	"pairinginstructions_generic_desc": "Imposta il tuo controller in modalità associazione",
 	"pairsuccess_title": "Fatto!",
@@ -28,7 +28,7 @@
 	"pairing_button_menu": "Pulsante Menu",
 	"pairing_button_b": "Pulsante B",
 	"pairing_knuckles_instructions_press": "Tieni premuto %1$s e %2$s fino a quando il controller non inizia ad emettere una luce blu lampeggiante.",
-	"pairing_pen_instructions_press": "Press and hold both the %1$s and %2$s until the light on the pen begins blinking blue...",
+	"pairing_pen_instructions_press": "Tieni premuti %1$s e %2$s fino a quando la luce sulla penna inizia a lampeggiare in blu...",
 	"pairing_tracker_instructions_press": "Tieni premuto %1$s fino a quando il dispositivo di tracciamento non inizia ad emettere una luce blu lampeggiante.",
 	"pairing_button_differentcontroller": "Voglio associare un altro controller...",
 	"pairing_button_done": "Fatto",
