--- a/resources/webinterface/dashboard/localization/bindingui_french.json
+++ b/resources/webinterface/dashboard/localization/bindingui_french.json
@@ -285,11 +285,11 @@
   "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Correction des colonnes",
   "DisplaySettings_ColumnCorrectionDesc": "La correction des colonnes réduit l'effet de grille lors des mouvements de tête. Nous vous recommandons de laisser cette option activée avec un ajustement de 0.",
-  "DisplaySettings_ColumnCorrectionEdit": "Edit",
+  "DisplaySettings_ColumnCorrectionEdit": "Modifier",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Une mise à jour du firmware est nécessaire pour personnaliser les paramètres d'affichage.",
   "DisplaySettings_EnableColumnCorrection": "Correction des colonnes",
-  "DisplaySettings_ColumnCorrectionOff": "Off",
-  "DisplaySettings_ColumnCorrectionAuto": "Auto",
+  "DisplaySettings_ColumnCorrectionOff": "Désactivé(e)",
+  "DisplaySettings_ColumnCorrectionAuto": "Automatique",
   "DisplaySettings_AdvancedSettings": "Paramètres avancés",
   "DisplaySettings_ShowAdvancedSettings": "Afficher les paramètres avancés",
   "DisplaySettings_HideAdvancedSettings": "Masquer les paramètres avancés",
