--- a/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
@@ -88,7 +88,7 @@
 	"Settings_Advanced_Paths_Header": "Caminhos",
 	"Settings_Advanced_Reset_Header": "Restaurar",
 	"Settings_Advanced_Status_Header": "Verificação de estado",
-	"Settings_ShowSettingsInDashboard": "Configurações (painel de RV)",
+	"Settings_ShowSettingsInDashboard": "Configurações (menu principal da RV)",
 	"Settings_CheckForSteam": "Verificar Steam",
 	"Settings_DebugInputBindings": "Ativar opções de depuração na interface de configuração de entrada",
 	"Settings_FadeToGrid": "Exibir grade quando o aplicativo trava",
@@ -133,8 +133,8 @@
 	"Settings_Video_AppResFooter": "A configuração atual renderiza uma imagem a %1$s para cada olho",
 	"Settings_Advanced_MotionSmoothing_Header": "Suavização de movimento",
 	"Settings_Advanced_MotionSmoothing_Description": "Sintetiza quadros novos para manter a qualidade da experiência quando o aplicativo em uso não é capaz de manter uma taxa de quadros aceitável.",
-	"Settings_Advanced_MotionSmoothing_Disabled": "Motion smoothing not supported on this GPU / driver version (requires asynchronous reprojection support).",
-	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Motion Smoothing is not supported on older versions of Windows.",
+	"Settings_Advanced_MotionSmoothing_Disabled": "A suavização de movimento não é compatível com esta placa de vídeo/versão de driver — é necessária a compatibilidade com a reprojeção assíncrona.",
+	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "A suavização de movimento não é compatível com versões anteriores do Windows.",
 	"Settings_Advanced_Supersampling_Auto": "Automática",
 	"Settings_Advanced_Supersampling_Custom": "Personalizada",
 	"Settings_Advanced_Supersampling_Header": "Resolução de renderização",
@@ -163,59 +163,60 @@
 	"Settings_PerApplication_MotionSmoothing_Checkbox": "Ativar suavização de movimento para este aplicativo",
 	"Settings_PerApplication_Reprojection_Header": "Reprojeção",
 	"Settings_PerApplication_Reprojection_Checkbox": "Usar modo de reprojeção clássico",
-	"Settings_PerApplication_Reprojection_Description": "Checking this option will disable asynchronous reprojection for this title.",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Override global refresh rate setting for this application",
-	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
+	"Settings_PerApplication_Reprojection_Description": "Marcar esta opção desativará a reprojeção assíncrona para este título.",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Sobrescrever a configuração de taxa de atualização global para este aplicativo",
+	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opção permitirá especificar uma taxa de atualização diferente da configuração global para este aplicativo.",
 	"Settings_MimeTypes_Pancake_Header": "Seleciona em qual aplicativo iniciar aplicações 2D",
 	"Settings_Camera_EnableCamera": "Ativar câmera",
-	"Settings_Camera_AllowCameraInDashboard": "Show Camera in Dashboard",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Turns on a camera window attached to your controller when the Dashboard is up.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Chaperone Edge",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
+	"Settings_Camera_AllowCameraInDashboard_Desc": "Ativa a janela de uma câmara anexada ao seu controle quando o menu principal estiver aberto.",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Enable Room View",
-	"Settings_Camera_AllowCameraForRoomView_Desc": "Access Room View at any time by double clicking the System button",
-	"Settings_Camera_Compatibility": "Camera rate",
-	"Settings_Camera_Rate_Hz": "Camera Rate (Hz)",
+	"Settings_Camera_AllowCameraForRoomView": "Ativar visão do cômodo",
+	"Settings_Camera_AllowCameraForRoomView_Desc": "Clique duas vezes no botão System a qualquer momento para acessar a visão de cômodo",
+	"Settings_Camera_Compatibility": "Taxa de câmara",
+	"Settings_Camera_Rate_Hz": "Taxa da câmara (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Caso enfrente perda de rastreamento, tente usar uma taxa diferente, desativar a câmera ou conectar a outra porta USB.",
 	"Advanced_Appearance": "Aparência",
-	"Settings_Appearance_Background": "Background",
-	"Settings_Appearance_Background_NoSteam": "Launch Steam to see any any additional backgrounds.",
-	"Settings_Appearance_Background_Select": "Change Background",
-	"Settings_Appearance_BackgroundDesc": "Pick a background for the default space",
+	"Settings_Appearance_Background": "Imagem de fundo",
+	"Settings_Appearance_Background_NoSteam": "Iniciar Steam para ver quaisquer imagens de fundos adicionais.",
+	"Settings_Appearance_Background_Select": "Alterar imagem de fundo",
+	"Settings_Appearance_BackgroundDesc": "Selecione uma imagem de fundo para o espaço padrão",
 	"Settings_Appearance_UseDomeProjection": "Usar projeção em cúpula",
 	"Settings_Appearance_UseDomeProjectionDesc": "Altera o estilo de projeção da imagem de fundo. Algumas imagens de fundo usam este recurso para criar uma experiência mais imersiva. Caso a imagem de fundo que tenha escolhido estiver distorcida, ative esta opção",
 	"Settings_Appearance_DomeCameraHeight": "Altura da câmera",
 	"Settings_Appearance_DomeCameraHeightDesc": "Ajustar a altura da câmera em relação à imagem de fundo",
 	"Settings_Appearance_DomeCameraRadius": "Raio da cúpula",
 	"Settings_Appearance_DomeCameraRadiusDesc": "Alterar o tamanho da cúpula.",
-	"Settings_Appearance_ResetDomeProjectionSettings": "Reset Dome Projection to Default",
-	"Settings_Appearance_PlayAreaColorDesc": "Adjust the style of your play area. You will see this when games are loading, or if you have disabled SteamVR Home Beta",
-	"Settings_Appearance_PlayArea_FloorColor": "Play Area Floor Color",
-	"Settings_Appearance_MoreEnvironments": "Get more SteamVR Home Environments",
-	"Settings_Power_ReturnToWatchdogTimeout": "Exit SteamVR after",
-	"Settings_Power_TurnOffScreensTimeout": "Turn off displays after",
-	"Settings_Power_TurnOffControllersTimeout": "Turn off controllers after",
-	"Settings_Power_ControllerOffOnExit": "Turn off controllers when exiting SteamVR",
-	"Settings_General_Notifications_Label": "Notifications",
-	"Settings_General_Notifications_Text": "Allow notifications while in VR",
-	"Settings_General_ShowBindingUI": "Edit Controller Bindings",
-	"Settings_General_ShowTrackerUI": "Manage Vive Trackers",
-	"Settings_General_Cancel": "Cancel",
-	"Settings_General_Confirm": "Confirm",
-	"Settings_General_Close": "Close",
-	"Settings_General_CalibrateThumbstick": "Calibrate",
-	"Settings_General_CalibrateThumbstick_ConnectAController": "Connect a controller with a thumbstick.",
-	"Settings_General_NotEnoughSamples": "Please press up on the thumbstick at least %1$s more times to complete calibration.",
-	"Settings_General_InviteMoreSamples": "Calculated angle of %1$s°. Keep pressing up to refine that value or press Confirm to accept this calibration.",
-	"Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s°",
-	"Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s°",
-	"Settings_General_LeftThumbstickAngle_NoValue": "Left Thumbstick Angle",
-	"Settings_General_RightThumbstickAngle_NoValue": "Right Thumbstick Angle",
-	"Settings_Dashboard_ShowProgressIndicator": "Long-press progress indicator",
-	"Settings_Dashboard_Position": "Dashboard Position",
+	"Settings_Appearance_ResetDomeProjectionSettings": "Restabelecer projeção da cúpula para valores-padrão",
+	"Settings_Appearance_PlayAreaColorDesc": "Ajuste o estilo da sua área de jogo. Você verá isto durante o carregamento dos jogos ou se tiver desativado Lar do SteamVR (Beta)",
+	"Settings_Appearance_PlayArea_FloorColor": "Cor do chão da área de jogo",
+	"Settings_Appearance_MoreEnvironments": "Mais ambientes para o Lar do SteamVR",
+	"Settings_Power_ReturnToWatchdogTimeout": "Sair do SteamVR após",
+	"Settings_Power_TurnOffScreensTimeout": "Desligar telas após",
+	"Settings_Power_TurnOffControllersTimeout": "Desligar controles após",
+	"Settings_Power_ControllerOffOnExit": "Desligar controles ao sair do SteamVR",
+	"Settings_General_Notifications_Label": "Notificações",
+	"Settings_General_Notifications_Text": "Permitir notificações enquanto estiver na RV",
+	"Settings_General_ShowBindingUI": "Editar comandos de controle",
+	"Settings_General_ShowTrackerUI": "Gerenciar rastreadores do Vive",
+	"Settings_General_Cancel": "Cancelar",
+	"Settings_General_Confirm": "Confirmar",
+	"Settings_General_Close": "Fechar",
+	"Settings_General_CalibrateThumbstick": "Calibrar",
+	"Settings_General_CalibrateThumbstick_ConnectAController": "Conectar um controle com uma alavanca analógica.",
+	"Settings_General_NotEnoughSamples": "Pressione a alavanca analógica, pelo menos, %1$s vez(es) para completar a calibração.",
+	"Settings_General_InviteMoreSamples": "Foi calculado um ângulo de %1$s°. Continue a pressionar para cima para otimizar o valor ou clique em Confirmar para aceitar esta calibração.",
+	"Settings_General_LeftThumbstickAngle": "Ângulo da alavanca analógica esquerda: %1$s°",
+	"Settings_General_RightThumbstickAngle": "Ângulo da alavanca analógica direita: %1$s°",
+	"Settings_General_LeftThumbstickAngle_NoValue": "Ângulo da alavanca analógica esquerda",
+	"Settings_General_RightThumbstickAngle_NoValue": "Ângulo da alavanca analógica direita",
+	"Settings_Dashboard_ShowProgressIndicator": "Indicador de progresso de pressionar longo",
+	"Settings_Dashboard_Position": "Posição do menu principal",
 	"Settings_Classic": "Classic",
 	"Settings_Near": "Near (beta)",
 	"Settings_DesktopScale": "Desktop Scale",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 segundos",
 	"SettingsTime_30s": "30 segundos",
 	"SettingsTime_1m": "1 minuto",
@@ -226,64 +227,68 @@
 	"SettingsTime_1h": "1 hora",
 	"SettingsTime_Never": "Nunca",
 	"Settings_Appearance_CycleBackgroundImageTimeSec": "Alterar imagem de fundo após:",
-	"Settings_Chaperone_BoundsColor": "Color",
-	"Settings_Chaperone_BoundsTransparency": "Transparency",
-	"Settings_Chaperone_Color": "Chaperone Color",
+	"Settings_Chaperone_BoundsColor": "Cor",
+	"Settings_Chaperone_BoundsTransparency": "Transparência",
+	"Settings_Chaperone_Color": "Cor do Chaperone",
 	"Settings_Appearance_Controller": "Alterar o modelo de controle",
 	"Settings_Appearance_Base": "Alterar o modelo da base de rastreio",
-	"Settings_Appearance_Environment": "Change your home environment",
+	"Settings_Appearance_Environment": "Alterar o ambiente inicial",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Sempre exibir limites do chão",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
-	"Settings_Loading": "Loading...",
-	"Settings_ResetToDefault": "Reset To Default",
-	"Settings_ResetPageToDefault": "Reset Page To Default",
-	"Settings_ToggleButton_On": "On",
-	"Settings_ToggleButton_Off": "Off",
-	"Settings_ToggleButton_Disable": "Disable",
-	"Settings_ToggleButton_Enable": "Enable",
-	"Settings_Header_SteamVR": "SteamVR Settings",
-	"Settings_CameraTest": "Test camera and performance",
-	"Settings_StartCameraTest": "Start Test",
-	"Settings_StopCameraTest": "Stop Test",
-	"CameraTest_CheckingCamera": "Checking camera...",
-	"CameraTest_CheckingTracking": "Checking tracking with camera...",
-	"CameraTest_CameraFailed": "Camera communication failed",
-	"CameraTest_TrackingFailed": "Tracking failed with camera enabled",
-	"CameraTest_Success": "Camera Test Passed",
-	"CameraTestStatus_Evaluating": "Checking",
-	"CameraTestStatus_Success": "Success",
-	"CameraTestStatus_Failure": "Failed",
-	"Settings_CameraChaperone_RoomViewMode": "Room View Camera Mode",
-	"CameraRoomViewMode_EdgeA": "Colored Edges",
-	"CameraRoomViewMode_EdgeB": "Colored Ghosts",
-	"CameraRoomViewMode_VideoTranslucent": "Translucent Pass-Through",
-	"CameraRoomViewMode_VideoOpaque": "Opaque Pass-Through",
-	"Settings_MustRestart_Description": "SteamVR must be restarted for some changes to take effect.",
-	"Settings_MustRestart_RestartSteamVR_Button": "Restart SteamVR",
-	"Settings_NotSupported": "Not Supported",
-	"Settings_AdvancedSettings": "Advanced Settings",
-	"Settings_Show": "Show",
-	"Settings_Hide": "Hide",
-	"Settings_ViveTracker": "Vive Tracker",
-	"Settings_ViveTrackers": "Vive Trackers",
-	"Settings_ViveTracker_Role": "Tracker Role",
-	"Settings_ViveTracker_Hand": "Hand",
-	"Settings_ViveTracker_Identify_NotConnected": "Vive Tracker isn't connected.",
-	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive Tracker isn't capable of identification.",
-	"Settings_ViveTracker_Connected": "Connected",
-	"Settings_ViveTracker_Disconnected": "Disconnected",
-	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
-	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
-	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
-	"Settings_ActiveController": "Active Controller",
-	"Settings_EditBinding": "Edit This Binding",
-	"Settings_EditBinding_ChooseAnother": "Choose Another",
-	"Settings_ShowOldBindingUI": "Show Old Binding UI",
-	"Settings_ManageVideoSettingsForApp": "Manage Video Settings For:",
-	"Settings_ManageControllerBindingSettingsForApp": "Manage Controller Bindings For:",
-	"Settings_ActiveControllerBinding": "Active Controller Binding",
-	"Settings_ActiveBinding": "Active Binding",
-	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
-	"Settings_ThumbstickSettings": "Thumbstick Settings",
-	"Settings_Number_Selected": "%1$s Selected"
+	"Settings_ConnectAnHMD": "Conecte um headset.",
+	"Settings_Loading": "Carregando...",
+	"Settings_ResetToDefault": "Restaurar padrões",
+	"Settings_ResetPageToDefault": "Restaurar página para o padrão",
+	"Settings_ToggleButton_On": "Ativada",
+	"Settings_ToggleButton_Off": "Desativada",
+	"Settings_ToggleButton_Disable": "Desativar",
+	"Settings_ToggleButton_Enable": "Ativar",
+	"Settings_Header_SteamVR": "Configurações do SteamVR",
+	"Settings_CameraTest": "Testar câmera e desempenho",
+	"Settings_StartCameraTest": "Iniciar teste",
+	"Settings_StopCameraTest": "Interromper teste",
+	"CameraTest_CheckingCamera": "Verificar câmera...",
+	"CameraTest_CheckingTracking": "Verificando rastreamento com a câmera...",
+	"CameraTest_CameraFailed": "A comunicação com a câmara falhou",
+	"CameraTest_TrackingFailed": "Falha no rastreamento com a câmera ativada",
+	"CameraTest_Success": "A câmera passou no teste",
+	"CameraTestStatus_Evaluating": "Verificando",
+	"CameraTestStatus_Success": "Sucesso",
+	"CameraTestStatus_Failure": "Falha",
+	"Settings_CameraChaperone_RoomViewMode": "Modo de câmera: visão do cômodo",
+	"CameraRoomViewMode_EdgeA": "Silhuetas coloridas",
+	"CameraRoomViewMode_EdgeB": "Fantasmas coloridos",
+	"CameraRoomViewMode_VideoTranslucent": "Translúcido",
+	"CameraRoomViewMode_VideoOpaque": "Opaco",
+	"Settings_MustRestart_Description": "O SteamVR precisa ser reiniciado para que algumas alterações surtam efeito.",
+	"Settings_MustRestart_RestartSteamVR_Button": "Reiniciar SteamVR",
+	"Settings_NotSupported": "Incompatível",
+	"Settings_AdvancedSettings": "Configurações avançadas",
+	"Settings_Show": "Exibir",
+	"Settings_Hide": "Ocultar",
+	"Settings_ViveTracker": "Rastreador do Vive",
+	"Settings_ViveTrackers": "Rastreadores do Vive",
+	"Settings_ViveTracker_Role": "Funçºao do rastreador",
+	"Settings_ViveTracker_Hand": "Mão",
+	"Settings_ViveTracker_Identify_NotConnected": "Rastreador Vive não conectado.",
+	"Settings_ViveTracker_Identify_NotIdentifiable": "Rastreador Vive não é capaz de identificar.",
+	"Settings_ViveTracker_Connected": "Conectado",
+	"Settings_ViveTracker_Disconnected": "Desconectado",
+	"Settings_PerApplication_VideoSettings": "Configurações de vídeo por aplicativo",
+	"Settings_ChooseStartupOverlayApps": "Escolher aplicativos de interface ao iniciar",
+	"Settings_StartTheseOverlayAppsOnLaunch": "Abrir estes aplicativos de interface ao iniciar:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
+	"Settings_ActiveController": "Controle ativo",
+	"Settings_EditBinding": "Editar este comando",
+	"Settings_EditBinding_ChooseAnother": "Escolher outro",
+	"Settings_ShowOldBindingUI": "Exibir interface de comandos antiga",
+	"Settings_ManageVideoSettingsForApp": "Gerenciar configurações de vídeo para:",
+	"Settings_ManageControllerBindingSettingsForApp": "Gerenciar comandos de controle para:",
+	"Settings_ActiveControllerBinding": "Comando ativo do controle",
+	"Settings_ActiveBinding": "Comando ativo",
+	"Settings_ShowThumbstickSettings": "Editar configurações da alavanca analógica",
+	"Settings_ThumbstickSettings": "Configurações da alavanca analógica",
+	"Settings_Number_Selected": "Selecionados: %1$s",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
