--- a/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Als je deze optie aanvinkt, kun je een andere vernieuwingsfrequentie invoeren voor deze toepassing.",
 	"Settings_MimeTypes_Pancake_Header": "Selecteer een toepassing om 2D-toepassingen in te starten",
 	"Settings_Camera_EnableCamera": "Camera inschakelen",
-	"Settings_Camera_AllowCameraInDashboard": "Camera op dashboard tonen",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Schakelt een cameravenster aan je controller in wanneer het dashboard actief is.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Camerabeeld bij Chaperone-grenzen tonen",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Kamerweergave inschakelen",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Ga op elk gewenst moment naar de kamerweergave door dubbel op de systeemknop te klikken",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Klassiek",
 	"Settings_Near": "Dichtbij (bèta)",
 	"Settings_DesktopScale": "Schaal voor desktop",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 seconden",
 	"SettingsTime_30s": "30 seconden",
 	"SettingsTime_1m": "1 minuut",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Startomgeving veranderen",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Vloergrenzen altijd tonen",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Please connect a headset.",
 	"Settings_Loading": "Bezig met laden...",
 	"Settings_ResetToDefault": "Standaardwaarden herstellen",
 	"Settings_ResetPageToDefault": "Pagina naar standaard herstellen",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Video-instellingen per toepassing",
 	"Settings_ChooseStartupOverlayApps": "Overlayapps voor opstarten selecteren",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Deze overlayapps openen bij het opstarten:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Actieve controller",
 	"Settings_EditBinding": "Deze configuratie bewerken",
 	"Settings_EditBinding_ChooseAnother": "Kies een andere",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Actieve configuratie",
 	"Settings_ShowThumbstickSettings": "Instellingen voor analoge stick beheren",
 	"Settings_ThumbstickSettings": "Instellingen voor analoge stick",
-	"Settings_Number_Selected": "%1$s geselecteerd"
+	"Settings_Number_Selected": "%1$s geselecteerd",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
