--- a/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
@@ -133,8 +133,8 @@
 	"Settings_Video_AppResFooter": "Nykyasetukset renderöivät kunkin silmän tarkkuudella %1$s.",
 	"Settings_Advanced_MotionSmoothing_Header": "Liikkeen pehmennys",
 	"Settings_Advanced_MotionSmoothing_Description": "Syntetisoi uudet ruudut hyvän katselukokemuksen säilyttämiseksi, kun käynnissä olevat sovellukset eivät pysy mukana.",
-	"Settings_Advanced_MotionSmoothing_Disabled": "Motion smoothing not supported on this GPU / driver version (requires asynchronous reprojection support).",
-	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Motion Smoothing is not supported on older versions of Windows.",
+	"Settings_Advanced_MotionSmoothing_Disabled": "Liikkeen pehmennystä ei tueta tällä näytönohjain-/ajuriversiolla (vaatii asynkronisen uudelleenprojektion tuen).",
+	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Liikkeen pehmennystä ei tueta Windowsin vanhemmilla versioilla.",
 	"Settings_Advanced_Supersampling_Auto": "Automaattinen",
 	"Settings_Advanced_Supersampling_Custom": "Mukautettu",
 	"Settings_Advanced_Supersampling_Header": "Renderöinnin resoluutio",
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Tämän asetuksen valitseminen mahdollistaa eri päivitystiheyden määrittelyn sovellukselle yleisistä asetuksista.",
 	"Settings_MimeTypes_Pancake_Header": "Valitse sovellus, jotta voit käynnistää 2D-sovellukset",
 	"Settings_Camera_EnableCamera": "Ota kamera käyttöön",
-	"Settings_Camera_AllowCameraInDashboard": "Näytä kamera työpöydällä.",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Käynnistää ohjaimeesi liitetyn kameranäkymän, kun työpöytä on käytössä.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Näytä kamera Chaperonen reunalla",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Ota huonenäkymä käyttöön",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Pääset milloin tahansa huonenäkymään kaksoisklikkaamalla järjestelmäpainiketta.",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Klassinen",
 	"Settings_Near": "Lähellä (beta)",
 	"Settings_DesktopScale": "Työpöydän skaala",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 sekuntia",
 	"SettingsTime_30s": "30 sekuntia",
 	"SettingsTime_1m": "Minuutti",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Vaihda kotiympäristöä",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Näytä lattiarajat aina",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Yhdistä VR-lasit.",
 	"Settings_Loading": "Ladataan...",
 	"Settings_ResetToDefault": "Palauta oletusarvot",
 	"Settings_ResetPageToDefault": "Palauta sivun oletukset",
@@ -275,15 +277,18 @@
 	"Settings_PerApplication_VideoSettings": "Sovelluskohtaiset videoasetukset",
 	"Settings_ChooseStartupOverlayApps": "Valitse sovellukset käynnistyksen yhteydessä olevaan peitetasoon",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Käynnistä nämä peitetason sovellukset käynnistyksen yhteydessä:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Aktiivinen ohjain",
 	"Settings_EditBinding": "Muokkaa tätä määritystä",
 	"Settings_EditBinding_ChooseAnother": "Valitse toinen",
-	"Settings_ShowOldBindingUI": "Show Old Binding UI",
+	"Settings_ShowOldBindingUI": "Näytä vanha määritysten käyttöliittymä",
 	"Settings_ManageVideoSettingsForApp": "Hallinnoi videoasetuksia sovellukselle:",
 	"Settings_ManageControllerBindingSettingsForApp": "Hallinnoi ohjainten määrityksiä sovellukselle:",
 	"Settings_ActiveControllerBinding": "Aktiivinen ohjainmääritys",
 	"Settings_ActiveBinding": "Aktiivinen määritys",
 	"Settings_ShowThumbstickSettings": "Muokkaa ohjainsauvan asetuksia",
 	"Settings_ThumbstickSettings": "Ohjainsauvan asetukset",
-	"Settings_Number_Selected": "%1$s valittu"
+	"Settings_Number_Selected": "%1$s valittu",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
