--- a/resources/webinterface/dashboard/localization/vrmonitor_french.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_french.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Cochez cette option si vous voulez définir une nouvelle fréquence de rafraîchissement pour cette application depuis les paramètres généraux.",
 	"Settings_MimeTypes_Pancake_Header": "Sélectionnez l'application avec laquelle lancer les applications 2D",
 	"Settings_Camera_EnableCamera": "Activer la caméra",
-	"Settings_Camera_AllowCameraInDashboard": "Afficher la caméra dans le tableau de bord",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Active une fenêtre caméra attachée à votre contrôleur quand le tableau de bord est affiché.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Afficher la caméra aux limites Chaperone",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Activer la vue de la pièce",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Accédez à la vue de la pièce à tout instant par un double clic du bouton System",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Classique",
 	"Settings_Near": "Proche (bêta)",
 	"Settings_DesktopScale": "Échelle du bureau",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 secondes",
 	"SettingsTime_30s": "30 secondes",
 	"SettingsTime_1m": "1 minute",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Changer votre environnement d'accueil",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Toujours afficher les limites au sol",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Veuillez connecter un casque.",
 	"Settings_Loading": "Chargement en cours...",
 	"Settings_ResetToDefault": "Rétablir les réglages par défaut",
 	"Settings_ResetPageToDefault": "Réinitialiser la page",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Paramètres vidéo par application",
 	"Settings_ChooseStartupOverlayApps": "Choisir les applications présentes dans l'overlay au démarrage",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Lancer ces applications d'overlay au démarrage :",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Contrôleur actif",
 	"Settings_EditBinding": "Modifier cette configuration",
 	"Settings_EditBinding_ChooseAnother": "En sélectionner une autre",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Configuration active",
 	"Settings_ShowThumbstickSettings": "Modifier les paramètres du stick analogique",
 	"Settings_ThumbstickSettings": "Paramètres du stick analogique",
-	"Settings_Number_Selected": "%1$s sélectionné"
+	"Settings_Number_Selected": "%1$s sélectionné",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
