--- a/resources/webinterface/dashboard/localization/vrmonitor_german.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_german.json
@@ -133,8 +133,8 @@
 	"Settings_Video_AppResFooter": "Die derzeitige Einstellung rendert jedes Auge mit %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "Bewegungsglättung",
 	"Settings_Advanced_MotionSmoothing_Description": "Synthetisiert neue Frames, um ein gutes Erlebnis zu gewährleisten, falls die laufende Anwendung nicht mit der Bildfrequenz mithalten kann.",
-	"Settings_Advanced_MotionSmoothing_Disabled": "Motion smoothing not supported on this GPU / driver version (requires asynchronous reprojection support).",
-	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Motion Smoothing is not supported on older versions of Windows.",
+	"Settings_Advanced_MotionSmoothing_Disabled": "Bewegungsglättung unterstützt diese GPU-/Treiberversion nicht (erfordert Unterstützung für asynchrone Rückprojektion).",
+	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Bewegungsglättung wird nicht von älteren Versionen von Windows unterstützt.",
 	"Settings_Advanced_Supersampling_Auto": "Automatisch",
 	"Settings_Advanced_Supersampling_Custom": "Benutzerdefiniert",
 	"Settings_Advanced_Supersampling_Header": "Renderauflösung",
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Bei Auswahl dieser Aktion kann eine benutzerdefinierte Aktualisierungsrate festgelegt werden.",
 	"Settings_MimeTypes_Pancake_Header": "Wählen Sie eine Anwendung zum Ausführen von 2D-Anwendungen",
 	"Settings_Camera_EnableCamera": "Kamera aktivieren",
-	"Settings_Camera_AllowCameraInDashboard": "Kamera im Dashboard anzeigen",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Aktiviert ein mit dem Controller verbundenes Kamerafenster, wenn das Dashboard aktiviert ist.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Kamera für Chaperone-Begrenzungen anzeigen",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Raumansicht aktivieren",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Greifen Sie jederzeit auf die Raumansicht zu, indem Sie die Systemtaste doppelt drücken.",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Klassisch",
 	"Settings_Near": "Nah (beta)",
 	"Settings_DesktopScale": "Desktop-Skalierung",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 Sekunden",
 	"SettingsTime_30s": "30 Sekunden",
 	"SettingsTime_1m": "1 Minute",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Startumgebung ändern",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Bodengrenzen immer anzeigen",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Bitte schließen Sie ein VR-Headset an.",
 	"Settings_Loading": "Wird geladen…",
 	"Settings_ResetToDefault": "Auf Standard zurücksetzen",
 	"Settings_ResetPageToDefault": "Seite auf Standard zurücksetzen",
@@ -275,15 +277,18 @@
 	"Settings_PerApplication_VideoSettings": "Videoeinstellungen pro Anwendung",
 	"Settings_ChooseStartupOverlayApps": "Overlay-Anwendungen beim Starten auswählen",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Diese Overlay-Anwendungen bei Ausführung starten:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Aktiver Controller",
 	"Settings_EditBinding": "Diese Zuordnung bearbeiten",
 	"Settings_EditBinding_ChooseAnother": "Andere Zuordnung auswählen",
-	"Settings_ShowOldBindingUI": "Show Old Binding UI",
+	"Settings_ShowOldBindingUI": "Alte Zuordnungsoberfläche anzeigen",
 	"Settings_ManageVideoSettingsForApp": "Videoeinstellungen verwalten für:",
 	"Settings_ManageControllerBindingSettingsForApp": "Controllerzuordnungen verwalten für:",
 	"Settings_ActiveControllerBinding": "Aktive Controllerzuordnung",
 	"Settings_ActiveBinding": "Aktive Zuordnung",
 	"Settings_ShowThumbstickSettings": "Analogstickeinstellungen bearbeiten",
 	"Settings_ThumbstickSettings": "Analogstickeinstellungen",
-	"Settings_Number_Selected": "%1$s ausgewählt"
+	"Settings_Number_Selected": "%1$s ausgewählt",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
