--- a/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "2Dアプリケーションを起動するアプリケーションを選択",
 	"Settings_Camera_EnableCamera": "カメラを有効化",
-	"Settings_Camera_AllowCameraInDashboard": "ダッシュボードにカメラを表示",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "ダッシュボードが表示されている時に、コントローラにアタッチされたカメラウィンドウを開く。",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Chaperone Edge",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "ルームビューを有効化",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "システムボタンのダブルクリックでいつでもルームビューにアクセス",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "クラシック",
 	"Settings_Near": "Near (beta)",
 	"Settings_DesktopScale": "デスクトップスケール",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5秒",
 	"SettingsTime_30s": "30秒",
 	"SettingsTime_1m": "1分",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "ホーム環境の変更",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "床の境界を常に表示",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Please connect a headset.",
 	"Settings_Loading": "ロード中...",
 	"Settings_ResetToDefault": "初期設定に戻す",
 	"Settings_ResetPageToDefault": "ページをデフォルトにリセット",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
 	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "アクティブなコントローラ",
 	"Settings_EditBinding": "このバインドを編集",
 	"Settings_EditBinding_ChooseAnother": "他を選択",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Active Binding",
 	"Settings_ShowThumbstickSettings": "サムスティック設定を編集",
 	"Settings_ThumbstickSettings": "サムスティック設定",
-	"Settings_Number_Selected": "%1$s選択中"
+	"Settings_Number_Selected": "%1$s選択中",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
