--- a/resources/webinterface/dashboard/localization/vrmonitor_latam.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_latam.json
@@ -133,8 +133,8 @@
 	"Settings_Video_AppResFooter": "La configuración actual muestra una resolución de %1$s a cada ojo",
 	"Settings_Advanced_MotionSmoothing_Header": "Suavizado de movimiento",
 	"Settings_Advanced_MotionSmoothing_Description": "Sintetiza nuevos fotogramas para mantener una buena experiencia cuando la aplicación en ejecución no puede continuar.",
-	"Settings_Advanced_MotionSmoothing_Disabled": "Motion smoothing not supported on this GPU / driver version (requires asynchronous reprojection support).",
-	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Motion Smoothing is not supported on older versions of Windows.",
+	"Settings_Advanced_MotionSmoothing_Disabled": "Esta GPU o la versión del controlador no son compatibles con el suavizado de movimiento, pues se requiere reproyección asíncrona.",
+	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Las versiones anteriores de Windows no son compatibles con el suavizado de movimiento.",
 	"Settings_Advanced_Supersampling_Auto": "Automática",
 	"Settings_Advanced_Supersampling_Custom": "Personalizado",
 	"Settings_Advanced_Supersampling_Header": "Resolución de renderizado",
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opción permitirá especificar una frecuencia de actualización diferente de la preferencia global para esta aplicación.",
 	"Settings_MimeTypes_Pancake_Header": "Selecciona una aplicación para lanzar aplicaciones de 2D en",
 	"Settings_Camera_EnableCamera": "Activar cámara",
-	"Settings_Camera_AllowCameraInDashboard": "Mostrar cámara en el menú principal",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Activa una ventana de cámara conectada a tu control cuando el menú principal está arriba.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Mostrar cámara en los límites de Chaperone",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Activar vista de habitación",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Accede a la vista de la habitación en cualquier momento haciendo doble clic en el botón Sistema",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Clásica",
 	"Settings_Near": "Cercana (beta)",
 	"Settings_DesktopScale": "Escala del Escritorio",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 segundos",
 	"SettingsTime_30s": "30 segundos",
 	"SettingsTime_1m": "1 minuto",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Cambia tu entorno inicial",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Mostrar siempre límites del suelo",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Por favor, conecta un visor.",
 	"Settings_Loading": "Cargando...",
 	"Settings_ResetToDefault": "Restablecer valores predeterminados",
 	"Settings_ResetPageToDefault": "Restablecer la página a predeterminada",
@@ -275,15 +277,18 @@
 	"Settings_PerApplication_VideoSettings": "Preferencias de video por aplicación",
 	"Settings_ChooseStartupOverlayApps": "Elegir aplicaciones de interfaz al iniciar",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Abrir estas aplicaciones de superposición al inicio:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Activar control",
 	"Settings_EditBinding": "Editar esta asignación",
 	"Settings_EditBinding_ChooseAnother": "Elegir otra",
-	"Settings_ShowOldBindingUI": "Show Old Binding UI",
+	"Settings_ShowOldBindingUI": "Mostrar interfaz de usuario de enlace antigua",
 	"Settings_ManageVideoSettingsForApp": "Administrar preferencias de video para:",
 	"Settings_ManageControllerBindingSettingsForApp": "Administrar asignación del control para:",
 	"Settings_ActiveControllerBinding": "Activar asignaciones de control",
 	"Settings_ActiveBinding": "Activar asignación",
 	"Settings_ShowThumbstickSettings": "Editar ajustes del stick analógico",
 	"Settings_ThumbstickSettings": "Ajustes del stick analógico",
-	"Settings_Number_Selected": "%1$s seleccionado"
+	"Settings_Number_Selected": "%1$s seleccionado",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
