--- a/resources/webinterface/dashboard/localization/vrmonitor_russian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_russian.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "Выберите приложение, в котором необходимо запустить 2D-приложения",
 	"Settings_Camera_EnableCamera": "Включить камеру",
-	"Settings_Camera_AllowCameraInDashboard": "Показать камеру в меню",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Включает окно камеры, привязанной к контроллеру, при показе меню.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Показывать камеру на краю пространственной сетки",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Включить обзор комнаты",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Перейдите к обзору комнаты в любое время, дважды нажав на кнопку System",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Classic",
 	"Settings_Near": "Near (beta)",
 	"Settings_DesktopScale": "Desktop Scale",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 секунд",
 	"SettingsTime_30s": "30 секунд",
 	"SettingsTime_1m": "1 минуту",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Изменить домашний игровой мир",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Всегда показывать сетку пола",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Пожалуйста, подключите шлем.",
 	"Settings_Loading": "Loading...",
 	"Settings_ResetToDefault": "Восстановить по умолчанию",
 	"Settings_ResetPageToDefault": "Reset Page To Default",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
 	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Active Controller",
 	"Settings_EditBinding": "Edit This Binding",
 	"Settings_EditBinding_ChooseAnother": "Choose Another",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Active Binding",
 	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
 	"Settings_ThumbstickSettings": "Thumbstick Settings",
-	"Settings_Number_Selected": "%1$s Selected"
+	"Settings_Number_Selected": "%1$s Selected",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
