--- a/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "选择一个要在其中启动 2D 应用程序的应用程序",
 	"Settings_Camera_EnableCamera": "启动摄像头",
-	"Settings_Camera_AllowCameraInDashboard": "在主面板中显示摄像头",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "主面板开启时，打开连接到您控制器上的摄像头窗口。",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Chaperone Edge",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Enable Room View",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "通过双击系统键来随时访问房间视角",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Classic",
 	"Settings_Near": "Near (beta)",
 	"Settings_DesktopScale": "Desktop Scale",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 秒",
 	"SettingsTime_30s": "30 秒",
 	"SettingsTime_1m": "1 分钟",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "更改您的家环境",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "总是显示地板边界",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Please connect a headset.",
 	"Settings_Loading": "Loading...",
 	"Settings_ResetToDefault": "重置为默认值",
 	"Settings_ResetPageToDefault": "Reset Page To Default",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
 	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Active Controller",
 	"Settings_EditBinding": "Edit This Binding",
 	"Settings_EditBinding_ChooseAnother": "Choose Another",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Active Binding",
 	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
 	"Settings_ThumbstickSettings": "Thumbstick Settings",
-	"Settings_Number_Selected": "%1$s Selected"
+	"Settings_Number_Selected": "%1$s Selected",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
