--- a/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "選擇用以啟動 2D 應用程式的應用程式",
 	"Settings_Camera_EnableCamera": "啟用鏡頭",
-	"Settings_Camera_AllowCameraInDashboard": "於主控台內顯示鏡頭",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "主控台開啟時，顯示位於控制器上方的鏡頭視窗。",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Chaperone Edge",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Enable Room View",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "按兩下「系統鍵」即可隨時進入房間視角",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Classic",
 	"Settings_Near": "Near (beta)",
 	"Settings_DesktopScale": "Desktop Scale",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 秒",
 	"SettingsTime_30s": "30 秒",
 	"SettingsTime_1m": "1 分鐘",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "變更家場景",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "永遠顯示地面邊界",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Please connect a headset.",
 	"Settings_Loading": "Loading...",
 	"Settings_ResetToDefault": "重設為預設值",
 	"Settings_ResetPageToDefault": "Reset Page To Default",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
 	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Active Controller",
 	"Settings_EditBinding": "Edit This Binding",
 	"Settings_EditBinding_ChooseAnother": "Choose Another",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Active Binding",
 	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
 	"Settings_ThumbstickSettings": "Thumbstick Settings",
-	"Settings_Number_Selected": "%1$s Selected"
+	"Settings_Number_Selected": "%1$s Selected",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
