--- a/resources/webinterface/dashboard/localization/vrmonitor_thai.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_thai.json
@@ -133,8 +133,8 @@
 	"Settings_Video_AppResFooter": "การตั้งค่าปัจจุบันจะเรนเดอร์ภาพบนตาแต่ละข้างที่ %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "ความเคลื่อนไหวแบบราบรื่น",
 	"Settings_Advanced_MotionSmoothing_Description": "จำลองเฟรมใหม่เพื่อรักษาประสบการณ์ที่ดีให้ยังคงอยู่ เมื่อแอปพลิเคชันที่กำลังทำงานอยู่ไม่สามารถทำงานได้ทัน",
-	"Settings_Advanced_MotionSmoothing_Disabled": "Motion smoothing not supported on this GPU / driver version (requires asynchronous reprojection support).",
-	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Motion Smoothing is not supported on older versions of Windows.",
+	"Settings_Advanced_MotionSmoothing_Disabled": "GPU/ไดรเวอร์ในเวอร์ชันนี้ไม่รองรับความเคลื่อนไหวแบบราบรื่น (ต้องรองรับรีโปรเจกชันแบบอะซิงโครนัส)",
+	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Windows ในเวอร์ชันเก่ากว่านี้ไม่รองรับความเคลื่อนไหวแบบราบรื่น",
 	"Settings_Advanced_Supersampling_Auto": "อัตโนมัติ",
 	"Settings_Advanced_Supersampling_Custom": "กำหนดเอง",
 	"Settings_Advanced_Supersampling_Header": "ความละเอียดเรนเดอร์",
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "การทำเครื่องหมายที่ตัวเลือกนี้จะอนุญาตให้กำหนดอัตรารีเฟรชแตกต่างจากการตั้งค่าโกลบอลสำหรับแอปพลิเคชันนี้ได้",
 	"Settings_MimeTypes_Pancake_Header": "เลือกแอปพลิเคชันเพื่อเปิดแอปพลิเคชันแบบ 2D ใน",
 	"Settings_Camera_EnableCamera": "เปิดการใช้งานกล้อง",
-	"Settings_Camera_AllowCameraInDashboard": "แสดงกล้องในกระดานรวม",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "เปิดหน้าต่างกล้องที่แนบกับคอนโทรลเลอร์ของคุณ เมื่อกระดานรวมเปิดขึ้นมา",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "แสดงกล้องที่ขอบเขต Chaperone",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "เปิดการใช้งานมุมมองห้อง",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "เข้าถึงมุมมองห้องเมื่อไหร่ก็ได้ โดยการคลิกปุ่มระบบสองครั้ง",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "คลาสสิก",
 	"Settings_Near": "ใกล้เข้าสู่สถานะ (เบต้า)",
 	"Settings_DesktopScale": "ปรับขนาดเดสก์ทอป",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 วินาที",
 	"SettingsTime_30s": "30 วินาที",
 	"SettingsTime_1m": "1 นาที",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "เปลี่ยนสภาพแวดล้อมบ้านของคุณ",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "แสดงขอบเขตบนพื้นเสมอ",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "กรุณาเชื่อมต่อเครื่องสวมศีรษะ",
 	"Settings_Loading": "กำลังโหลด...",
 	"Settings_ResetToDefault": "รีเซ็ตเป็นค่าเริ่มต้น",
 	"Settings_ResetPageToDefault": "รีเซ็ตหน้าเป็นค่าเริ่มต้น",
@@ -275,15 +277,18 @@
 	"Settings_PerApplication_VideoSettings": "การตั้งค่าวีดิโอต่อแอปพลิเคชัน",
 	"Settings_ChooseStartupOverlayApps": "เลือกแอปโอเวอร์เลย์หน้าหลัก",
 	"Settings_StartTheseOverlayAppsOnLaunch": "เปิดแอปพลิเคชันโอเวอร์เลย์เหล่านี้บนการเริ่ม:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "คอนโทรลเลอร์ที่ใช้งานอยู่",
 	"Settings_EditBinding": "แก้ไขการกำหนดปุ่มนี้",
 	"Settings_EditBinding_ChooseAnother": "เลือกอีกอัน",
-	"Settings_ShowOldBindingUI": "Show Old Binding UI",
+	"Settings_ShowOldBindingUI": "แสดง UI การเชื่อมโยงแบบเก่า",
 	"Settings_ManageVideoSettingsForApp": "จัดการการตั้งค่าวิดีโอสำหรับ:",
 	"Settings_ManageControllerBindingSettingsForApp": "จัดการการกำหนดปุ่มคอนโทรลเลอร์สำหรับ:",
 	"Settings_ActiveControllerBinding": "การกำหนดปุ่มคอนโทรลเลอร์ที่ใช้อยู่",
 	"Settings_ActiveBinding": "การกำหนดปุ่มที่ใช้อยู่",
 	"Settings_ShowThumbstickSettings": "แก้ไขการตั้งค่าทัมสติก",
 	"Settings_ThumbstickSettings": "การตั้งค่าทัมสติก",
-	"Settings_Number_Selected": "%1$s ได้ถูกเลือก"
+	"Settings_Number_Selected": "%1$s ได้ถูกเลือก",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
