--- a/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
@@ -133,8 +133,8 @@
 	"Settings_Video_AppResFooter": "Поточні налаштування роздільності для кожного ока: %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "Згладжування рухів",
 	"Settings_Advanced_MotionSmoothing_Description": "Синтезує нові кадри, щоби підтримувати гарне занурення, якщо застосунок не може цього забезпечити.",
-	"Settings_Advanced_MotionSmoothing_Disabled": "Motion smoothing not supported on this GPU / driver version (requires asynchronous reprojection support).",
-	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Motion Smoothing is not supported on older versions of Windows.",
+	"Settings_Advanced_MotionSmoothing_Disabled": "Згладжування рухів не підтримується цією відеокартою чи версією драйверів (необхідно мати підтримку асинхронної репроекції).",
+	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "Згладжування рухів не підтримується старішими версіями Windows.",
 	"Settings_Advanced_Supersampling_Auto": "Автоматично",
 	"Settings_Advanced_Supersampling_Custom": "Власне",
 	"Settings_Advanced_Supersampling_Header": "Роздільна здатність рендерингу",
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Вибір цього параметра дозволить вказати іншу частоту оновлення у глобальних налаштуваннях для цього застосунку.",
 	"Settings_MimeTypes_Pancake_Header": "Оберіть застосунок, у якому слід запустити двомірний застосунок",
 	"Settings_Camera_EnableCamera": "Увімкнути камеру",
-	"Settings_Camera_AllowCameraInDashboard": "Показувати камеру на панелі навігації",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Коли показується панель навігації, то вмикає вікно камери, прив’язаної до вашого контролера.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Показувати камеру на межі сітки Chaperone",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Увімкнути огляд кімнати",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Перехід до огляду кімнати в будь-який час шляхом подвійного натискання кнопки System",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Класичний",
 	"Settings_Near": "Близько (бета)",
 	"Settings_DesktopScale": "Шкала робочого стола",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 секунд",
 	"SettingsTime_30s": "30 секунд",
 	"SettingsTime_1m": "1 хвилину",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Змінити домашнє середовище",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Завжди показувати решітку підлоги",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Please connect a headset.",
 	"Settings_Loading": "Завантаження…",
 	"Settings_ResetToDefault": "Скинути до стандартних",
 	"Settings_ResetPageToDefault": "Скинути налаштування сторінки до стандартних",
@@ -275,15 +277,18 @@
 	"Settings_PerApplication_VideoSettings": "Налаштування відео для індивідуальних застосунків",
 	"Settings_ChooseStartupOverlayApps": "Оберіть оверлейні застосунки, що відкриваються під час запуску",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Відкривати такі оверлейні застосунки під час запуску:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Активний контролер",
 	"Settings_EditBinding": "Редагувати цю розкладку",
 	"Settings_EditBinding_ChooseAnother": "Обрати іншу",
-	"Settings_ShowOldBindingUI": "Show Old Binding UI",
+	"Settings_ShowOldBindingUI": "Показати інтерфейс старої розкладки",
 	"Settings_ManageVideoSettingsForApp": "Керування налаштуваннями відео для:",
 	"Settings_ManageControllerBindingSettingsForApp": "Керування розкладками контролера для:",
 	"Settings_ActiveControllerBinding": "Активна розкладка контролера",
 	"Settings_ActiveBinding": "Активна розкладка",
 	"Settings_ShowThumbstickSettings": "Редагувати налаштування стіка",
 	"Settings_ThumbstickSettings": "Налаштування стіка",
-	"Settings_Number_Selected": "Обрано %1$s"
+	"Settings_Number_Selected": "Обрано %1$s",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
