--- a/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "Chọn một ứng dụng để chạy cùng với các ứng dụng 2D",
 	"Settings_Camera_EnableCamera": "Bật camera",
-	"Settings_Camera_AllowCameraInDashboard": "Hiện camera trong trang tổng quan",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Bật một cửa sổ camera được gắn vào bộ điều khiển của bạn khi trang tổng quan hiện.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Chaperone Edge",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Bật hiển thị phòng",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Truy cập hiển thị phòng bất kỳ lúc nào khi nhấp đôi nút System",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Classic",
 	"Settings_Near": "Near (beta)",
 	"Settings_DesktopScale": "Desktop Scale",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 giây",
 	"SettingsTime_30s": "30 giây",
 	"SettingsTime_1m": "1 phút",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Thay đổi môi trường trang chủ của bạn",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Luôn hiện giới hạn sàn",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Please connect a headset.",
 	"Settings_Loading": "Loading...",
 	"Settings_ResetToDefault": "Đặt lại về mặc định",
 	"Settings_ResetPageToDefault": "Reset Page To Default",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
 	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Active Controller",
 	"Settings_EditBinding": "Edit This Binding",
 	"Settings_EditBinding_ChooseAnother": "Choose Another",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Active Binding",
 	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
 	"Settings_ThumbstickSettings": "Thumbstick Settings",
-	"Settings_Number_Selected": "%1$s Selected"
+	"Settings_Number_Selected": "%1$s Selected",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
