--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_latam.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_latam.json
@@ -12,14 +12,14 @@
 	"pairing_nodongles_desc": "SteamVR no encuentra ningún hardware con el que emparejar los controles.",
 	"pairing_nodongles_instr": "Asegúrate de que el visor esté conectado.",
 	"pairing_selectdevice_title": "Selecciona el tipo de control",
-	"pairingdevice_knuckles_controllername": "Valve Index Controller",
+	"pairingdevice_knuckles_controllername": "Control Valve Index",
 	"pairingdevice_vivewand_shortname": "Control HTC Vive",
 	"pairingdevice_vivetracker_shortname": "Tracker HTC Vive",
 	"pairingdevice_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
-	"pairingdevice_a_knuckles_controllername": "a Valve Index Controller",
+	"pairingdevice_a_knuckles_controllername": "un control Valve Index",
 	"pairingdevice_a_vivewand_shortname": "un control HTC Vive",
 	"pairingdevice_a_vivetracker_shortname": "un tracker HTC Vive",
-	"pairingdevice_a_logitechvrinkpilotedition_shortname": "a Logitech VR Ink Pilot Edition",
+	"pairingdevice_a_logitechvrinkpilotedition_shortname": "un Logitech VR Ink Pilot Edition",
 	"pair_controller_title": "Emparejar %1$s",
 	"pairinginstructions_generic_desc": "Pon tu control en modo emparejamiento",
 	"pairsuccess_title": "¡Completada!",
@@ -28,7 +28,7 @@
 	"pairing_button_menu": "Botón Menú",
 	"pairing_button_b": "Botón B",
 	"pairing_knuckles_instructions_press": "Mantén pulsados el %1$s y el %2$s hasta que la luz del control comience a parpadear en azul...",
-	"pairing_pen_instructions_press": "Press and hold both the %1$s and %2$s until the light on the pen begins blinking blue...",
+	"pairing_pen_instructions_press": "Mantén pulsados %1$s y %2$s hasta que la luz del lápiz comience a parpadear en azul...",
 	"pairing_tracker_instructions_press": "Mantén pulsado el %1$s hasta que la luz del tracker comience a parpadear en azul...",
 	"pairing_button_differentcontroller": "Quiero emparejar otro tipo de control...",
 	"pairing_button_done": "Aceptar",
