--- a/resources/webinterface/dashboard/localization/vrmonitor_czech.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_czech.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "Aplikace pro spouštění 2D aplikací",
 	"Settings_Camera_EnableCamera": "Povolit kameru",
-	"Settings_Camera_AllowCameraInDashboard": "Povolit kameru na hlavní obrazovce",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Přidá na hlavní obrazovku okno s kamerou připevněné k ovladači.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Použít kameru při dosažení kolizních hranic",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Povolit pohled ven",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Umožní pohled ven kdykoli po dvojím stisknutí tlačítka „System“.",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Classic",
 	"Settings_Near": "Near (beta)",
 	"Settings_DesktopScale": "Desktop Scale",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "Po 5 sekundách",
 	"SettingsTime_30s": "Po 30 sekundách",
 	"SettingsTime_1m": "Po 1 minutě",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Změna domovského prostředí",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Vždy zobrazovat hranice na zemi",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Please connect a headset.",
 	"Settings_Loading": "Loading...",
 	"Settings_ResetToDefault": "Obnovit výchozí",
 	"Settings_ResetPageToDefault": "Reset Page To Default",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
 	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Active Controller",
 	"Settings_EditBinding": "Edit This Binding",
 	"Settings_EditBinding_ChooseAnother": "Choose Another",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Active Binding",
 	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
 	"Settings_ThumbstickSettings": "Thumbstick Settings",
-	"Settings_Number_Selected": "%1$s Selected"
+	"Settings_Number_Selected": "%1$s Selected",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
