--- a/resources/webinterface/dashboard/localization/vrmonitor_danish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_danish.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Hvis dette felt markeres, kan du angive en anden opdateringshastighed end applikationens globale indstilling.",
 	"Settings_MimeTypes_Pancake_Header": "Vælg en applikation, som 2D-applikationer skal startes i",
 	"Settings_Camera_EnableCamera": "Slå kamera til",
-	"Settings_Camera_AllowCameraInDashboard": "Vis kamera i instrumentbræt",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Tænder et kameravindue, som er tilknyttet din controller, når instrumentbrættet vises.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Vis kamera ved Chaperone-grænse",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Slå rumvisning til",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Få adgang til rumvisning når som helst ved at dobbeltklikke på systemknappen",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Klassisk",
 	"Settings_Near": "Nær (beta)",
 	"Settings_DesktopScale": "Skalering til skrivebord",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 sekunder",
 	"SettingsTime_30s": "30 sekunder",
 	"SettingsTime_1m": "1 minut",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Skift dit hjemmemiljø",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Vis altid gulvgrænser",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Tilslut et headset.",
 	"Settings_Loading": "Indlæser...",
 	"Settings_ResetToDefault": "Nulstil til standardindstillinger",
 	"Settings_ResetPageToDefault": "Nulstil til standardindstillinger",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Videoindstillinger pr. applikation",
 	"Settings_ChooseStartupOverlayApps": "Vælg overlay-apps til opstart",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start disse overlay-apps ved opstart:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Aktiv controller",
 	"Settings_EditBinding": "Rediger denne binding",
 	"Settings_EditBinding_ChooseAnother": "Vælg en anden",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Aktiv binding",
 	"Settings_ShowThumbstickSettings": "Rediger styrepindsindstillinger",
 	"Settings_ThumbstickSettings": "Styrepindsindstillinger",
-	"Settings_Number_Selected": "%1$s valgt"
+	"Settings_Number_Selected": "%1$s valgt",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
