--- a/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "Válassz alkalmazást a 2D-s alkalmazások futtatásához",
 	"Settings_Camera_EnableCamera": "Kamera bekapcsolása",
-	"Settings_Camera_AllowCameraInDashboard": "Kamera mutatása a műszerfalon",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Bekapcsol egy kameraablakot a játékvezérlődhöz kapcsolva, amikor felhozod a Műszerfalat.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Kamera mutatása a Chaperone határoknál",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Szobanézet bekapcsolása",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "A szobanézethez bármikor hozzáférhetsz a Rendszer gombot duplán megnyomva.",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Classic",
 	"Settings_Near": "Near (beta)",
 	"Settings_DesktopScale": "Desktop Scale",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 másodperc",
 	"SettingsTime_30s": "30 másodperc",
 	"SettingsTime_1m": "1 perc",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Otthoni környezeted megváltoztatása",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Mindig mutassa a padlóhatárokat",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Please connect a headset.",
 	"Settings_Loading": "Loading...",
 	"Settings_ResetToDefault": "Alapbeállításokra",
 	"Settings_ResetPageToDefault": "Reset Page To Default",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
 	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Active Controller",
 	"Settings_EditBinding": "Edit This Binding",
 	"Settings_EditBinding_ChooseAnother": "Choose Another",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Active Binding",
 	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
 	"Settings_ThumbstickSettings": "Thumbstick Settings",
-	"Settings_Number_Selected": "%1$s Selected"
+	"Settings_Number_Selected": "%1$s Selected",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
