--- a/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "Velg et program som 2D-programmer skal startes i",
 	"Settings_Camera_EnableCamera": "Slå på kamera",
-	"Settings_Camera_AllowCameraInDashboard": "Vis kamera i dashbordet",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Slår på et kameravindu festet til kontrolleren, når dashbordet er oppe.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Vis kamera ved Chaperone-grense",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Slå på romvisning",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Åpne romvisningen når som helst ved å dobbeltklikke på systemknappen.",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Classic",
 	"Settings_Near": "Near (beta)",
 	"Settings_DesktopScale": "Desktop Scale",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 sekunder",
 	"SettingsTime_30s": "30 sekunder",
 	"SettingsTime_1m": "1 minutt",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Endre hjemmeomgivelse",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Alltid vis gulvgrensen",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Please connect a headset.",
 	"Settings_Loading": "Loading...",
 	"Settings_ResetToDefault": "Tilbakestill til standard",
 	"Settings_ResetPageToDefault": "Reset Page To Default",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
 	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Active Controller",
 	"Settings_EditBinding": "Edit This Binding",
 	"Settings_EditBinding_ChooseAnother": "Choose Another",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Active Binding",
 	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
 	"Settings_ThumbstickSettings": "Thumbstick Settings",
-	"Settings_Number_Selected": "%1$s Selected"
+	"Settings_Number_Selected": "%1$s Selected",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
