--- a/resources/webinterface/dashboard/localization/vrmonitor_polish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_polish.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "Wybierz aplikację służącą do uruchamiania aplikacji 2D",
 	"Settings_Camera_EnableCamera": "Włącz kamerę",
-	"Settings_Camera_AllowCameraInDashboard": "Pokaż kamerę w panelu głównym",
+	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Włącza okno kamery dołączone do twojego kontrolera, gdy panel główny jest na wierzchu.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Pokaż kamerę na krańcach Chaperone",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Uruchom widok pokoju",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Uzyskaj dostęp do widoku pokoju w dowolnej chwili, wciskając dwa razy przycisk System.",
@@ -216,6 +216,7 @@
 	"Settings_Classic": "Classic",
 	"Settings_Near": "Near (beta)",
 	"Settings_DesktopScale": "Desktop Scale",
+	"Settings_DashboardScale": "Dashboard Scale",
 	"SettingsTime_5s": "5 s",
 	"SettingsTime_30s": "30 s",
 	"SettingsTime_1m": "1 min",
@@ -234,6 +235,7 @@
 	"Settings_Appearance_Environment": "Zmień środowisko domowe",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Zawsze pokazuj granice podłogi",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
+	"Settings_ConnectAnHMD": "Proszę podłączyć gogle.",
 	"Settings_Loading": "Loading...",
 	"Settings_ResetToDefault": "Przywróć domyślne",
 	"Settings_ResetPageToDefault": "Reset Page To Default",
@@ -275,6 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
 	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
 	"Settings_ActiveController": "Active Controller",
 	"Settings_EditBinding": "Edit This Binding",
 	"Settings_EditBinding_ChooseAnother": "Choose Another",
@@ -285,5 +288,7 @@
 	"Settings_ActiveBinding": "Active Binding",
 	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
 	"Settings_ThumbstickSettings": "Thumbstick Settings",
-	"Settings_Number_Selected": "%1$s Selected"
+	"Settings_Number_Selected": "%1$s Selected",
+	"TestControllerTitle": "Testing Controller %1$s",
+	"TestController_NoController": "Turn on a controller to test it."
 }
