--- a/resources/webinterface/dashboard/localization/webhelper_brazilian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_brazilian.json
@@ -48,6 +48,8 @@
 	"/user/hand/primary": "Mão dominante",
 	"/user/hand/secondary": "Mão secundária",
 	"/user/hand/any": "Qualquer mão",
+	"/user/stylus": "Stylus",
+	"/user/gamepad": "Gamepad",
 	"/user/foot/left": "Pé esquerdo",
 	"/user/foot/right": "Pé direito",
 	"/user/shoulder/left": "Ombro esquerdo",
