--- a/resources/webinterface/dashboard/localization/webhelper_finnish.json
+++ b/resources/webinterface/dashboard/localization/webhelper_finnish.json
@@ -48,6 +48,8 @@
 	"/user/hand/primary": "Hallitseva käsi",
 	"/user/hand/secondary": "Toinen käsi",
 	"/user/hand/any": "Kumpi tahansa käsi",
+	"/user/stylus": "Stylus",
+	"/user/gamepad": "Gamepad",
 	"/user/foot/left": "Vasen jalka",
 	"/user/foot/right": "Oikea jalka",
 	"/user/shoulder/left": "Vasen olkapää",
