--- a/resources/webinterface/dashboard/localization/webhelper_french.json
+++ b/resources/webinterface/dashboard/localization/webhelper_french.json
@@ -48,6 +48,8 @@
 	"/user/hand/primary": "Main principale",
 	"/user/hand/secondary": "Main secondaire",
 	"/user/hand/any": "N'importe quelle main",
+	"/user/stylus": "Stylus",
+	"/user/gamepad": "Gamepad",
 	"/user/foot/left": "Pied gauche",
 	"/user/foot/right": "Pied droit",
 	"/user/shoulder/left": "Épaule gauche",
