--- a/resources/webinterface/dashboard/localization/webhelper_schinese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_schinese.json
@@ -48,6 +48,8 @@
 	"/user/hand/primary": "主用手",
 	"/user/hand/secondary": "另一只手",
 	"/user/hand/any": "任一只手",
+	"/user/stylus": "Stylus",
+	"/user/gamepad": "Gamepad",
 	"/user/foot/left": "左脚",
 	"/user/foot/right": "右脚",
 	"/user/shoulder/left": "左肩",
